--- a/Practice/03_12/index.html
+++ b/Practice/03_12/index.html
@@ -6,6 +6,8 @@
     <title>Practice: Making classes and objects</title>
     <script type="module" src="Backpack.js"></script>
     <script type="module" src="script.js"></script>
+    <script type="module" src="Keyboard.js"></script>
+    <script type="module" src="MChose.js"></script>
   </head>
   <body></body>
 </html>
